<resources>
    <string name="app_name">TaskToDo</string>
    <string name="TaskUSer">User</string>
    <string name="TaskPassword">Password</string>
    <string name="LogButtont">Entrar</string>
    <string name="LoginButton">Crear Cuenta</string>
    <string name="TaskAsunto">Subject</string>
    <string name="TaskDescr">Description</string>
    <string name="TaskPoints">Points</string>
    <string name="TaskDateFinal">Delivery</string>
    <string name="TaskButtonSave">Save</string>
    <string name="TaskButtonDEleteTask">Delete</string>
    <string name="TaskButtonNewTask">New Task</string>
    <string name="TaskButtonUpdateTask">Update</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="TittleNewTaskActivity">New Task</string>
    <string name="TittleTasks">Tasks to do </string>
    <string name="TittleNewLog">TaskToDo</string>
    <string name="ItemCerrarSesion">Off</string>
</resources>

